ALignment fixes on community and hero section

--- a/version_control/Codurance_September2020/css/modules/software-craftsmanship-v2.css
+++ b/version_control/Codurance_September2020/css/modules/software-craftsmanship-v2.css
@@ -21,6 +21,10 @@
   scroll-snap-type: x mandatory;
 }
 
+.software-craft-group::-webkit-scrollbar {
+    display: none;
+}
+
 
 
 {% call utils.extra_large() %}
